Design Homepage UI: Added Typing Animation and Images Rotation and Screenshot of our chat. Design Footer UI. Fixed some Alignment Issues with UI.

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -38,3 +38,16 @@ body {
 .MuiOutlinedInput-notchedOutline {
   border-color: white !important;
 }
+
+.rotate {
+  animation: rotation 8s infinite linear;
+}
+
+@keyframes rotation {
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(359deg);
+  }
+}
